--- a/.github/workflows/cuda-9.2.ompi-4.0.yml
+++ b/.github/workflows/cuda-9.2.ompi-4.0.yml
@@ -1,19 +1,19 @@
-name: ompi-4.0
+name: cuda-9.2.ompi-4.0
 
 on:
   push:
     branches:
       - master
     paths:
-      - 'cascadelake-opa/openmpi-4.0.Dockerfile'
+      - 'dgx2/cuda-9.2.ompi-4.0.Dockerfile'
   pull_request:
     branches: 
       - master
     paths:
-      - 'cascadelake-opa/openmpi-4.0.Dockerfile'
+      - 'dgx2/cuda-9.2.ompi-4.0.Dockerfile'
 
 env:
-  BASE_IMAGE_NAME: ompi-4.0
+  BASE_IMAGE_NAME: cuda-9.2.ompi-4.0
 
   DOCKERHUB_REPO: hpc-base-container
   DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
@@ -25,7 +25,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Test Build image
-        run: docker build . --file "cascadelake-opa/openmpi-4.0.Dockerfile" --tag $BASE_IMAGE_NAME
+        run: docker build . --file "dgx2/cuda-9.2.ompi-4.0.Dockerfile" --tag $BASE_IMAGE_NAME
 
   deploy:
     needs: test
@@ -37,7 +37,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Build image
-        run: docker build . --file "cascadelake-opa/openmpi-4.0.Dockerfile" --tag $BASE_IMAGE_NAME
+        run: docker build . --file "dgx2/cuda-9.2.ompi-4.0.Dockerfile" --tag $BASE_IMAGE_NAME
 
       - name: Log into registry
         run: echo "$DOCKERHUB_TOKEN" | docker login -u $DOCKERHUB_USER --password-stdin
