--- a/.github/workflows/ompi-3.1.yml
+++ b/.github/workflows/ompi-3.1.yml
@@ -1,6 +1,7 @@
 name: ompi-3.1
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - master
@@ -31,7 +32,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    if: github.event_name == 'push'
+    if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
 
     steps:
       - uses: actions/checkout@v2
